--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,25 +1,25 @@
-name: Generate Snake
+name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Runs every day at midnight
+    - cron: "0 0 * * *"  # Runs at midnight UTC every day
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Generate Snake
-        uses: Platane/snk@master
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Generate Snake Animation
+        uses: Platane/snk@v2
         with:
-          github_user_name: ${{ github.repository_owner }}
-          output: dist/snake.svg
-      - name: Commit and push the snake animation
-        run: |
-          git config --global user.name "GitHub Action"
-          git config --global user.email "action@github.com"
-          git add dist/snake.svg
-          git commit -m "Generated snake animation"
-          git push
+          github_user_name: kaws26
+          svg_out_path: dist/snake.svg
+
+      - name: Push Snake Animation to Output Branch
+        uses: ad-m/github-push-action@v3
+        with:
+          branch: output
+          directory: dist
